apps/production/client-sites/nayeong-song/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nayeong-song
  namespace: lulo-demo-landings
  labels:
    app: nayeong-song
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nayeong-song
  template:
    metadata:
      labels:
        app: nayeong-song
        name: nayeong-song
    spec:
      containers:
      - name: nayeong-song
        image: "registry.yesidlopez.de/nayeong-song:v0.0.1" # {"$imagepolicy": "lulo-demo-landings:nayeong-song"}
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "300m"
      imagePullSecrets:
        - name: registry-secret
