apps/production/client-sites/nayeong-song/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nayeong-song
  name: nayeong-song
  namespace: lulo-demo-landings
spec:
  selector:
    app: nayeong-song
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
