apps/production/client-sites/nayeong-song/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nayeong-song
  namespace: lulo-demo-landings
  annotations:
    cert-manager.io/cluster-issuer: luloai-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/target: homelab.luloai.com
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nayeong-song.demo.luloai.com
      secretName: nayeong-song-tls
  rules:
    - host: nayeong-song.demo.luloai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nayeong-song
                port:
                  number: 3000
